User microservice updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.jdbc=DEBUG
 logging.level.com.zaxxer.hikari=DEBUG
 
-datastore.ms.url=http://localhost:8083/api
+datastore.ms.url=http://localhost:8083/api/datastore
 
