--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -38,7 +38,7 @@ phases:
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Writing image definitions file...
       - REPOSITORY_URI=381492308048.dkr.ecr.us-east-1.amazonaws.com/taf-user-registry
-      - printf '[{"name":"user-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"taf-user-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - echo Writing image definitions file...
       - # add your container name
       - DOCKER_CONTAINER_NAME=taf-user-container
