Ip address updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,4 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.jdbc=DEBUG
 logging.level.com.zaxxer.hikari=DEBUG
 
-datastore.ms.url=http://localhost:8083/api/datastore
-
+datastore.ms.url=http://3.93.239.126:8083/api/datastore
